--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,14 @@
 {
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  },
+  "eslint.options": {
+    "extensions": [".js", ".jsx", ".md", ".mdx", ".ts", ".tsx"]
+  },
   "eslint.validate": [
     "javascript",
+    "markdown",
+    "mdx",
     "javascriptreact",
     { "Language": "typescript", "autoFix": true },
     { "language": "typescriptreact", "autoFix": true}
