--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "react-transition-group": "^4.4.1",
-    "typescript": "^4.2.4",
+    "typescript": "4.2.2",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
@@ -62,11 +62,13 @@
   },
   "devDependencies": {
     "@storybook/addon-actions": "^6.2.9",
+    "@storybook/addon-docs": "^6.2.9",
     "@storybook/addon-essentials": "^6.2.9",
     "@storybook/addon-info": "^5.3.21",
     "@storybook/addon-links": "^6.2.9",
     "@storybook/node-logger": "^6.2.9",
     "@storybook/preset-create-react-app": "^3.1.7",
-    "@storybook/react": "^6.2.9"
+    "@storybook/react": "^6.2.9",
+    "babel-loader": "^8.2.2"
   }
 }
