--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cola",
+  "name": "cola-react-ui",
   "version": "0.1.0",
   "description": "React components library",
   "author": "hmx",
