--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cola-react-ui",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "React components library",
   "author": "hmx",
   "private": false,
@@ -84,7 +84,6 @@
     "@storybook/node-logger": "^6.2.9",
     "@storybook/preset-create-react-app": "^3.1.7",
     "@storybook/react": "^6.2.9",
-    "babel-loader": "8.1.0",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
@@ -93,10 +92,12 @@
     "@types/react": "^17.0.4",
     "@types/react-dom": "^17.0.3",
     "@types/react-transition-group": "^4.4.1",
+    "babel-loader": "8.1.0",
+    "cross-env": "^7.0.3",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "typescript": "4.2.2",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "typescript": "4.2.2"
   }
 }
