--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,18 @@ language: node_js
 node_js:
   - "stable"
 cache:
-  diretories:
+  directories:
   - node_modules
 env:
   - CI=true
+script:
+  - npm run build-storybook
+deploy:
+  provider: pages
+  skip_cleanup: true
+  github_token: $github_token
+  local_dir: storybook-static
+  on:
+    branch: travis
+  
+  
